@@ -1,6 +1,10 @@
 Roundcube Webmail MarkASJunk2
 =============================
 
+2009 11 30
+==========
+ * Use explode() rather than split()
+
 2009 10 31
 ==========
  * Create driver based system for different learning methods
